[package]
name = "fss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
atty = "0.2.14"
clap = { version = "4.5.35", features = [
  "color",
  "derive",
  "suggestions",
  "wrap_help",
] }
colored = "3.0.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
fnv = "1.0.7"
humansize = "2.1.3"
lazy_static = "1.5.0"
num-format = "0.4.4"
num_cpus = "1.16.0"
rayon = "1.10.0"
regex = "1.11.1"
walkdir = "2.5.0"


[profile.release]
strip = "none"
